k8s/httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: bearlu/httpserver:v1
          ports:
            - containerPort: 8080
          lifecycle:
            postStart:
              exec:
                command: ['/bin/sh', '-c', 'echo httpserver started!']
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 1
              memory: 30Mi
            limits:
              cpu: 1
              memory: 50Mi
          volumeMounts:
            - name: log-volume
              mountPath: /logs
      volumes:
        - name: log-volume
          emptyDir:
            sizeLimit: 20Mi
